kube/nextjs-frontend/deployment.yaml
####
# Note: this is a basic example file 
# for production scenarios, you should
# consider building deployments with 
# features like livenessProbe, 
# readinessProbe, securityContext, 
# resource limits, etc.
####
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/l3montree-dev/kubernetes-developer-workshop/nextjs-frontend:latest@sha256:8ad31379891c2814803f7a654b079cc23539a2bd90bcbd772c6821e6ea772673
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
